# novault

./: .gitignore  Cargo.toml  README.md  default.nix  index.html  justfile  novault.nix
design/: cli.toml  purpose.toml
src/: cmds.rs  main.rs  secure.rs  types.rs  utils.rs
