[package]
authors = ["Garrett Berg <googberg@gmail.com>"]
name = "novault"
version = "0.1.0"

[dependencies]
ansi_term = "*"
base64 = "0.6.0"
chan-signal = "0.3.1"
dialoguer = "0.1.0"
error-chain = "0.11.0"
libc = "0.2.30"
openssl = "0.9.17"
prelude = "0.2.0"
serde = "1.0.14"
serde_derive = "1.0.14"
strfmt = "0.1.5"
structopt = "0.1.0"
structopt-derive = "0.1.0"
toml = "0.4.5"
